# midi2otomad

./: .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  vitest.setup.ts
.claude/skills/run-midi2otomad/: SKILL.md  driver.mjs  launch-tauri.sh  make-fixtures.mjs
.claude/skills/tdd/: SKILL.md
.claude/skills/tdd/references/: vitest-examples.md
.github/workflows/: build-windows.yml  bump-version.yml  ci.yml  release.yml
core/: Cargo.toml
core/src/: id.rs  lib.rs  midi.rs  music.rs  schema.rs
core/src/audio/: curve.rs  envelope.rs  filter.rs  granular.rs  interpolation.rs  lfo.rs  limiter.rs  mixer.rs  mod.rs  oneshot.rs  pitch.rs  pitch_detect.rs  pitchmod.rs  polyphony.rs  resample.rs  reverb.rs  timestretch.rs
core/src/media/: decode.rs  encode.rs  mod.rs
core/tests/: media_roundtrip.rs  midi_to_audio.rs  mix_pipeline.rs
scripts/: generate-icons.mjs  selftest.ts
src/: app-icon.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  player.rs
src/main/: dialogs.test.ts  dialogs.ts  index.test.ts  index.ts
src/main/media/: backend.test.ts  backend.ts  encode.test.ts  encode.ts
src/preload/: index.test.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.test.tsx  App.tsx  env.d.ts  index.css  main.test.tsx  main.tsx
src/renderer/src/audio/: context.test.ts  context.ts  decode.test.ts  decode.ts  engine.test.ts  engine.ts  preview.test.ts  preview.ts
src/renderer/src/components/: HelpPanel.test.tsx  HelpPanel.tsx  LevelMeter.test.tsx  LevelMeter.tsx  OutputPanel.test.tsx  OutputPanel.tsx  ReverbPanel.test.tsx  ReverbPanel.tsx  SampleInspector.test.tsx  SampleInspector.tsx  SampleLibrary.test.tsx  SampleLibrary.tsx  Timeline.test.tsx  Timeline.tsx  TopBar.test.tsx  TopBar.tsx  TrackInspector.test.tsx  TrackInspector.tsx  TrackRow.test.tsx  TrackRow.tsx  Waveform.test.tsx  Waveform.tsx
src/renderer/src/midi/: import.test.ts  import.ts
src/renderer/src/state/: StudioContext.test.tsx  StudioContext.tsx
src/renderer/src/util/: format.test.ts  format.ts
src/shared/: id.test.ts  id.ts  ipc.test.ts  ipc.ts  media.test.ts  media.ts
src/shared/audio/: curve.test.ts  curve.ts  envelope.test.ts  envelope.ts  filter.test.ts  filter.ts  interpolation.test.ts  interpolation.ts  lfo.test.ts  lfo.ts  mixer.test.ts  mixer.ts  pitchmod.test.ts  pitchmod.ts  polyphony.test.ts  polyphony.ts  resample.test.ts  resample.ts  reverb.test.ts  reverb.ts
src/shared/music/: detect.test.ts  detect.ts  pitch.test.ts  pitch.ts
src/shared/schemas/: project.test.ts  project.ts
src/test/: studio.ts
ui/: Cargo.toml  Trunk.toml  index.html  style.css
ui/src/: api.rs  enums.rs  format.rs  icons.rs  main.rs  state.rs  widgets.rs
ui/src/components/: library.rs  mod.rs  panels.rs  sample_inspector.rs  timeline.rs  topbar.rs  track_inspector.rs
