[workspace]
resolver = "2"
members = ["core", "src-tauri", "ui"]
default-members = ["core", "src-tauri"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["kongyo2"]
repository = "https://github.com/kongyo2/midi2otomad"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# strip を有効にすると wasm の target_features セクションが落ち、release の wasm-opt が
# 必要な機能を判別できず失敗する。シンボルは wasm-opt 側で除去されるため false のままにする。
strip = false
