[workspace]
resolver = "2"
members = ["core", "src-tauri", "ui"]
default-members = ["core", "src-tauri"]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["kongyo2"]
repository = "https://github.com/kongyo2/midi2otomad"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
