[package]
name = "midi2otomad-core"
description = "純Rust の MIDI 音MAD 合成エンジン（スキーマ・DSP・MIDI/音声入出力）"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "midi2otomad_core"
path = "src/lib.rs"

[features]
default = ["decode", "mp3"]
decode = ["dep:symphonia"]
mp3 = ["dep:mp3lame-encoder"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midly = { version = "0.5", default-features = false, features = ["std"] }
symphonia = { version = "0.5", optional = true, default-features = false, features = [
  "wav",
  "aiff",
  "mp3",
  "flac",
  "ogg",
  "vorbis",
  "isomp4",
  "aac",
  "alac",
  "pcm",
] }
mp3lame-encoder = { version = "0.2", optional = true }
